<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".ProfileActivity">

    <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/hilmi"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/test"/>

    <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="15dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_profile"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"/>

    <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_margin="5dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"/>

    <TextView
            android:id="@+id/tv_xp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xp"
            android:layout_margin="12dp"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"/>

    <TextView
            android:id="@+id/tv_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joined"
            android:layout_margin="7dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_xp"
            tools:ignore="MissingConstraints"/>

    <ImageView
            android:id="@+id/iv_joined_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/img_desc"/>

    <ImageView
            android:id="@+id/iv_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/img_desc"/>

    <ImageView
            android:id="@+id/iv_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_3"
            app:layout_constraintTop_toTopOf="@id/iv_challenge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_joined_classes"
            app:layout_constraintEnd_toEndOf="@id/iv_challenge"
            android:contentDescription="@string/img_desc"
            app:layout_constraintVertical_bias="0.413"/>

</androidx.constraintlayout.widget.ConstraintLayout>